--- a/assets/style.css
+++ b/assets/style.css
@@ -1,6 +1,23 @@
 body {
     background-color: rgb(196, 200, 255);
     font-family: Bai Jamjuree;
+
+#container {
+    display: flex;
+}
+
+.cartao {
+    margin: 1rem 1rem;
+    background-color: aqua;
+    height: 20rem;
+    flex-grow: 1;
+    flex-basis: calc(33% - 6rem);
+}
+
+.cartao__conteudo {
+    text-align: center;
+}
+
 }
 footer {
     background-color: black;
