--- a/assets/style.css
+++ b/assets/style.css
@@ -70,3 +70,14 @@ footer p {
 .cartao__conteudo__resposta {
     backface-visibility: hidden;
 }
+.cartao__conteudo__resposta {
+    transform: rotateY(180deg);
+    position: absolute;
+    height: 100%;
+    width: 100%;
+}
+.cartao__conteudo p {
+    margin-top: 1rem;
+    padding: 2rem;
+    margin-top: 4rem;
+}
