--- a/assets/style.css
+++ b/assets/style.css
@@ -81,3 +81,10 @@ footer p {
     padding: 2rem;
     margin-top: 4rem;
 }
+#container {
+    display: flex;
+     flex-wrap: wrap;
+     justify-content: space-between;
+     padding: 4rem;
+     gap: 3rem;
+}
