--- a/assets/style.css
+++ b/assets/style.css
@@ -105,3 +105,9 @@ criaCartao(
     'Quanto tempo durou a guerra dos 100 anos?',
     'Ela durou exatos 106 anos'
 )
+<script src="app.js"></script>
+<script src="perguntas.js"></script>
+
+function criaCartao(categoria, pergunta, resposta) {
+    console.log(categoria, pergunta, resposta)
+}
